--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -1,17 +1,47 @@
 .schedule {
   margin-top: 24px;
+
+  @include on-tablet {
+    border-left: 1px solid $main-text-color;
+    margin-top: 39px;
+    margin-left: 39px;
+    padding-left: 39px;
+    margin-bottom: 30px;
+  }
   padding-bottom: 27px;
 
   &-title {
     color: $main-text-color;
     margin-bottom: 20px;
   }
+
   &-list {
     padding: 0;
     color: $main-text-color;
+
+    @include on-tablet {
+      margin: 0;
+      font-family: IBM Plex Sans;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 21px;
+      text-align: left;
+      min-width: 160px;
+    }
   }
 
   &-text {
     color: $main-text-color;
+
+    @include on-tablet {
+      margin-left: 26px;
+      max-width: 144px;
+    }
+  }
+
+  &-flex {
+    @include on-tablet {
+      display: flex;
+    }
   }
 }
