--- a/src/styles/base/common.scss
+++ b/src/styles/base/common.scss
@@ -19,7 +19,19 @@ img {
   height: auto;
 }
 
-.flex {
+.flex-aside {
   display: flex;
   flex-direction: column;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.flex {
+  display: flex;
+}
+
+a {
+  text-decoration: none;
 }
