--- a/src/styles/blocks.scss
+++ b/src/styles/blocks.scss
@@ -2,3 +2,8 @@
 @import './blocks/icons';
 @import './blocks/menu';
 @import './blocks/schedule';
+@import './blocks/events';
+@import './blocks/lection';
+@import './blocks/gallery';
+@import './blocks/subcraption';
+@import './blocks/footer';
