--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,20 +1,152 @@
 .header {
-  background-image: url(../images/photos/Художній_музей.png);
-  background-size: cover;
-  background-position: center;
-  height: 300px;
-  width: 320px;
-  padding-bottom: 27px;
-
-  &-nav {
-    display: flex;
-    align-items: center;
+  display: flex;
+  flex-direction: column-reverse;
+  @include on-tablet {
+    flex-direction: row;
   }
+  &-namu {
+    display: flex;
+    background-image: url(../images/photos/Художній_музей.png);
+    height: 100vh;
+    background-size: cover;
 
-  &-logo {
-    margin-top: 9px;
-    margin-left: 88px;
-    width: 55px;
-    height: 61px;
+    @include on-tablet {
+      display: block;
+      background-size: contain;
+      background-position: right center;
+      flex: 1;
+
+      background-repeat: no-repeat;
+    }
+    @include on-desktop {
+      display: block;
+      background-size: contain;
+      background-position: right center;
+      flex: 1;
+
+      background-repeat: no-repeat;
+    }
+  }
+  &-museum {
+    @include on-tablet {
+      padding-left: 55px;
+    }
+
+    &__title {
+      margin-top: 20px;
+      margin-bottom: 39px;
+      font-family: Montserrat;
+      font-size: 45px;
+      font-weight: 700;
+      line-height: 45px;
+      text-align: center;
+      @include on-tablet {
+        font-family: Montserrat;
+        font-size: 54px;
+        font-weight: 700;
+        line-height: 64.8px;
+        max-width: 340px;
+      }
+      @include on-desktop {
+        margin-top: 70px;
+        font-family: Montserrat;
+        font-size: 72px;
+        font-weight: 700;
+        line-height: 86.4px;
+        text-align: left;
+        max-width: 470px;
+        margin-bottom: 89px;
+      }
+    }
+
+    &__ticket {
+      margin-left: auto;
+      margin-right: auto;
+      padding-left: 68px;
+
+      position: relative;
+      display: flex;
+      justify-content: center;
+
+      align-items: center;
+      width: 280px;
+      height: 50px;
+      border: 1px solid $main-bcg-color;
+      text-decoration: none;
+
+      color: black;
+      @include on-tablet {
+        position: relative;
+        display: flex;
+        justify-content: center;
+
+        align-items: center;
+        width: 280px;
+        height: 50px;
+        border: 1px solid $main-bcg-color;
+        text-decoration: none;
+
+        color: black;
+        @include on-tablet {
+          height: 70px;
+        }
+      }
+
+      @include on-desktop {
+        padding-left: 68px;
+        margin-left: 201px;
+      }
+      &::after {
+        content: '';
+        width: 50px;
+        height: 50px;
+        @include on-tablet {
+          width: 70px;
+          height: 70px;
+        }
+        background-color: $main-bcg-color;
+        background-image: url(../images/icons/icon_button.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        margin-left: auto;
+        @include on-tablet {
+          content: '';
+          width: 70px;
+          height: 70px;
+          background-color: $main-bcg-color;
+          background-image: url(../images/icons/icon_button.svg);
+          background-repeat: no-repeat;
+          background-position: center;
+          margin-left: auto;
+        }
+      }
+    }
+
+    &__events {
+      @include on-mobile {
+        display: none;
+      }
+      @include on-desktop {
+        transform: rotate(270deg);
+        transform-origin: left top;
+        display: inline-block;
+        color: #687480;
+        font-family: IBM Plex Sans;
+        font-size: 14px;
+        line-height: 14px;
+
+        &::after {
+          content: '';
+          display: block;
+          width: 70px;
+          height: 1px;
+          background-color: #687480;
+          position: absolute;
+          left: -220%;
+          top: 50%;
+          transform: translateY(-50%);
+        }
+      }
+    }
   }
 }
