--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -19,9 +19,15 @@
   &-nav {
     gap: 28px;
     padding-top: 27px;
+    @include on-tablet {
+      padding-top: 39px;
+    }
     display: flex;
     border-bottom: 1px solid $main-text-color;
     padding-bottom: 24px;
+    @include on-tablet {
+      border-bottom: none;
+    }
     &__item {
       text-decoration: none;
       color: $main-text-color;
@@ -33,6 +39,15 @@
 
     &__about {
       margin-bottom: 24px;
+    }
+  }
+
+  &-flex {
+    display: flex;
+    flex-direction: column;
+
+    @include on-tablet {
+      flex-direction: row;
     }
   }
 }
