--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -1,3 +1,9 @@
+@mixin on-mobile {
+  @media (min-width: 320px) {
+    @content;
+  }
+}
+
 @mixin on-tablet {
   @media (min-width: 768px) {
     @content;
@@ -5,7 +11,7 @@
 }
 
 @mixin on-desktop {
-  @media (min-width: 1280px) {
+  @media (min-width: 1024px) {
     @content;
   }
 }
