--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -42,6 +42,15 @@
       flex-direction: column;
       align-items: normal;
     }
+
+    @include on-tablet {
+      margin-right: 40px;
+      justify-content: normal;
+    }
+
+    @include on-desktop {
+      margin-right: 130px;
+    }
   }
 
   &-schedule {
@@ -51,6 +60,7 @@
   &-list {
     margin: 0;
     padding: 0;
+    margin-top: 20px;
   }
 
   &-weekend {
@@ -67,6 +77,7 @@
     }
 
     @include on-desktop {
+      margin-top: 40px;
       font-weight: 600;
       width: 170px;
     }
@@ -75,6 +86,20 @@
   &-contacts {
     margin: 0;
     padding: 0;
+    margin-top: 20px;
+
+    @include on-desktop {
+      width: 180px;
+    }
+
+    &__link {
+      color: #0f0e08;
+      font-family: IBM Plex Sans;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 21px;
+      text-align: left;
+    }
   }
 
   &-up {
@@ -163,5 +188,19 @@
       display: block;
       margin-left: 65px;
     }
+  }
+}
+
+.footer-new__div {
+  margin-left: 32px;
+}
+
+.mt {
+  margin-top: 20px;
+}
+
+.footer-flex2 {
+  @include on-tablet {
+    display: flex;
   }
 }
