--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -2,5 +2,10 @@
   &-title {
     margin-top: 183px;
     text-align: center;
+    margin-bottom: 30px;
+
+    @include on-tablet {
+      text-align: left;
+    }
   }
 }
