--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -19,10 +19,18 @@
     background-image: url(../images/photos/БГК.png);
     background-position: center;
     background-size: cover;
-    height: 100vh;
+    height: 210px;
     display: flex;
     justify-content: center;
     align-items: flex-end;
+
+    @include on-tablet {
+      height: 390px;
+    }
+
+    @include on-desktop {
+      height: 550px;
+    }
   }
 
   &-container {
