--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,9 +1,11 @@
 .header {
   display: flex;
   flex-direction: column-reverse;
+
   @include on-tablet {
     flex-direction: row;
   }
+
   &-namu {
     display: flex;
     background-image: url(../images/photos/Художній_музей.png);
@@ -16,18 +18,18 @@
       background-size: contain;
       background-position: right center;
       flex: 1;
-
       background-repeat: no-repeat;
     }
+
     @include on-desktop {
       display: block;
       background-size: contain;
       background-position: right center;
       flex: 1;
-
       background-repeat: no-repeat;
     }
   }
+
   &-museum {
     @include on-tablet {
       padding-left: 55px;
@@ -36,21 +38,23 @@
     &__title {
       margin-top: 20px;
       margin-bottom: 39px;
-      font-family: Montserrat;
+      font-family: Montserrat, sans-serif; // Added quotes and fallback font
       font-size: 45px;
       font-weight: 700;
       line-height: 45px;
       text-align: center;
+
       @include on-tablet {
-        font-family: Montserrat;
+        font-family: Montserrat, sans-serif; // Added quotes and fallback font
         font-size: 54px;
         font-weight: 700;
         line-height: 64.8px;
         max-width: 340px;
       }
+
       @include on-desktop {
         margin-top: 70px;
-        font-family: Montserrat;
+        font-family: Montserrat, sans-serif; // Added quotes and fallback font
         font-size: 72px;
         font-weight: 700;
         line-height: 86.4px;
@@ -64,54 +68,44 @@
       margin-left: auto;
       margin-right: auto;
       padding-left: 85px;
-
       position: relative;
       display: flex;
       justify-content: center;
-
       align-items: center;
       width: 280px;
       height: 50px;
       border: 1px solid $main-bcg-color;
       text-decoration: none;
-
       color: black;
+
       @include on-tablet {
         position: relative;
         display: flex;
         justify-content: center;
-
         align-items: center;
         width: 280px;
-        height: 50px;
+        height: 70px; // Corrected for tablet
         border: 1px solid $main-bcg-color;
         text-decoration: none;
-
         color: black;
-        @include on-tablet {
-          height: 70px;
-        }
       }
 
       @include on-desktop {
         padding-left: 68px;
         margin-left: 201px;
       }
+
       &::after {
         content: '';
         width: 50px;
         height: 50px;
-        @include on-tablet {
-          width: 70px;
-          height: 70px;
-        }
         background-color: $main-bcg-color;
         background-image: url(../images/icons/icon_button.svg);
         background-repeat: no-repeat;
         background-position: center;
         margin-left: auto;
+
         @include on-tablet {
-          content: '';
           width: 70px;
           height: 70px;
           background-color: $main-bcg-color;
@@ -127,12 +121,13 @@
       @include on-mobile {
         display: none;
       }
+
       @include on-desktop {
         transform: rotate(270deg);
         transform-origin: left top;
         display: inline-block;
         color: #687480;
-        font-family: IBM Plex Sans;
+        font-family: 'IBM Plex Sans', sans-serif; // Added quotes and fallback font
         font-size: 14px;
         line-height: 14px;
 
