--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -4,7 +4,7 @@
   width: 280px;
   height: 410px;
 
-  object-fit: cover; /* Изображение заполняет контейнер с сохранением пропорций */
+  object-fit: cover;
 
   @include on-tablet {
     width: 340px;
@@ -16,8 +16,10 @@
     height: auto;
   }
 }
+
 .swiper {
   margin-bottom: 130px;
+
   @include on-desktop {
     display: none;
   }
@@ -28,6 +30,7 @@
 
   @include on-desktop {
     @include page-grid;
+
     gap: 30px;
     margin-bottom: 20px;
     margin-top: 56px;
@@ -45,6 +48,7 @@
 .c {
   grid-column: span 8;
 }
+
 .d {
   grid-column: span 4;
 }
