--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -39,7 +39,7 @@
     flex-direction: column;
     align-items: center;
     margin: 0 20px;
-    box-shadow: 0px 2px 0px 0px #1a5a4c40;
+    box-shadow: 0 2px 0 0 #1a5a4c40;
 
     background-color: white;
 
