--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -17,6 +17,10 @@
   &-img {
     width: 100%;
     height: auto;
+    transition: transform 0.3s ease;
+    &:hover {
+      transform: scale(1.05);
+    }
 
     @include on-tablet {
       max-width: 700px;
