--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -57,3 +57,17 @@
   position: relative;
   margin-top: 20px;
 }
+
+.a,
+.b,
+.c,
+.d {
+  transition: transform 0.3s ease;
+}
+
+.a:hover,
+.b:hover,
+.c:hover,
+.d:hover {
+  transform: scale(1.05);
+}
