--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,23 +1,28 @@
 .events {
   &-container {
     margin-bottom: 60px;
+
     @include on-desktop {
       display: flex;
       margin-bottom: 104px;
     }
   }
+
   margin-top: 70px;
 
   @include on-tablet {
     margin-top: 88px;
   }
+
   @include on-desktop {
     margin-top: 200px;
   }
+
   &-img {
     width: 100%;
     height: auto;
     transition: transform 0.3s ease;
+
     &:hover {
       transform: scale(1.05);
     }
@@ -31,9 +36,10 @@
       }
     }
   }
+
   &-text {
     margin-top: 11px;
-    font-family: IBM Plex Sans;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-size: 16px;
     line-height: 24px;
     text-align: left;
@@ -43,9 +49,10 @@
       margin-top: 15px;
     }
   }
+
   &-title {
     margin-bottom: 40px;
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-size: 36px;
     font-weight: 700;
     line-height: 36px;
@@ -54,7 +61,7 @@
 
     @include on-tablet {
       margin-bottom: 48px;
-      font-family: Montserrat;
+      font-family: Montserrat, sans-serif;
       font-size: 48px;
       font-weight: 700;
       line-height: 48px;
@@ -74,7 +81,7 @@
 
     &__mini {
       margin-top: 10px;
-      font-family: Montserrat;
+      font-family: Montserrat, sans-serif;
       font-size: 28px;
       line-height: 28px;
       text-align: left;
@@ -82,7 +89,7 @@
 
       @include on-tablet {
         margin-top: 30px;
-        font-family: Montserrat;
+        font-family: Montserrat, sans-serif;
         font-size: 36px;
         font-weight: 400;
         line-height: 36px;
@@ -95,12 +102,10 @@
     align-items: center;
     justify-content: space-between;
     margin-top: 20px;
-
-    font-family: IBM Plex Sans;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 16px;
-
     color: #687480;
 
     @include on-tablet {
@@ -114,15 +119,14 @@
     }
 
     &__date {
-      font-family: IBM Plex Sans;
+      font-family: 'IBM Plex Sans', sans-serif;
       font-size: 16px;
       line-height: 24px;
-
       color: #1a5a4c;
 
       @include on-tablet {
         margin-left: 40px;
-        font-family: IBM Plex Sans;
+        font-family: 'IBM Plex Sans', sans-serif;
         font-size: 14px;
         font-weight: 700;
         line-height: 21px;
