--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -8,6 +8,7 @@
     padding-left: 39px;
     margin-bottom: 30px;
   }
+
   padding-bottom: 27px;
 
   &-title {
@@ -21,7 +22,7 @@
 
     @include on-tablet {
       margin: 0;
-      font-family: IBM Plex Sans;
+      font-family: 'IBM Plex Sans', sans-serif;
       font-size: 14px;
       font-weight: 400;
       line-height: 21px;
