--- a/src/styles/blocks/subcraption.scss
+++ b/src/styles/blocks/subcraption.scss
@@ -7,7 +7,7 @@
 
   &-title {
     margin-top: 88px;
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-size: 36px;
     font-weight: 700;
     line-height: 36px;
@@ -15,7 +15,7 @@
     color: white;
 
     @include on-tablet {
-      font-family: Montserrat;
+      font-family: Montserrat, sans-serif;
       font-size: 48px;
       font-weight: 700;
       line-height: 48px;
@@ -24,14 +24,14 @@
 
   &-text {
     margin-top: 20px;
-    font-family: IBM Plex Sans;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-size: 18px;
     line-height: 27px;
     text-align: center;
     color: white;
 
     @include on-tablet {
-      font-family: IBM Plex Sans;
+      font-family: 'IBM Plex Sans', sans-serif;
       font-size: 18px;
       font-weight: 400;
       line-height: 18px;
@@ -55,10 +55,7 @@
     }
 
     &__box {
-      margin-top: 50px;
-      margin-bottom: 88px;
-      margin-left: auto;
-      margin-right: auto;
+      margin: 50px auto 88px;
       display: flex;
 
       @include on-tablet {
