--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -13,7 +13,8 @@
     background-size: cover;
 
     @include on-tablet {
-      height: 50vh;
+      width: 374px;
+      height: 384px;
       display: block;
       background-size: contain;
 
@@ -22,6 +23,7 @@
     }
 
     @include on-desktop {
+      height: 100vh;
       display: block;
       background-size: contain;
       background-position: right center;
