screen sizes fixs

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -160,6 +160,10 @@
     @include on-tablet {
       display: flex; // Moved from the duplicated .footer-flex2 selector
     }
+
+    @media (min-width: 2000px) {
+      justify-content: center;
+    }
   }
 
   &-person {
