--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -6,6 +6,10 @@
     flex-direction: row;
   }
 
+  @include on-desktop {
+    justify-content: space-between;
+  }
+
   &-namu {
     display: flex;
     background-image: url(../images/photos/Художній_музей.png);
@@ -23,7 +27,8 @@
     }
 
     @include on-desktop {
-      height: 100vh;
+      max-width: 725px;
+      min-height: 625px;
       display: block;
       background-size: contain;
       background-position: right center;
