--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -29,6 +29,9 @@
   display: none;
 
   @include on-desktop {
+    max-width: 2350px;
+    margin: 0 auto;
+
     @include page-grid;
 
     gap: 30px;
@@ -69,5 +72,5 @@
 .b:hover,
 .c:hover,
 .d:hover {
-  transform: scale(1.05);
+  transform: scale(1.02);
 }
