--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -64,6 +64,14 @@
   &-contacts {
     @include on-desktop {
       width: 180px;
+
+      & li {
+        transition: transform 0.3s;
+      }
+
+      & li:hover {
+        transform: scale(1.1);
+      }
     }
 
     &__link {
