--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -5,11 +5,11 @@
     display: flex;
     flex-direction: column;
 
-    @include onTablet {
+    @include on-tablet {
       margin-bottom: 120px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       justify-content: space-between;
       margin-bottom: 90px;
       flex-direction: row;
@@ -20,7 +20,7 @@
     display: flex;
     flex-direction: column;
 
-    @include onTablet {
+    @include on-tablet {
       flex-direction: row;
       gap: 100px;
     }
@@ -34,13 +34,13 @@
     margin-top: 70px;
     position: relative;
 
-    @include onTablet {
+    @include on-tablet {
       margin-bottom: 64px;
       width: 520px;
       margin-left: 162px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       display: none;
     }
   }
@@ -53,7 +53,7 @@
     right: 0;
     bottom: 20px;
 
-    @include onTablet {
+    @include on-tablet {
       display: none;
     }
   }
@@ -63,7 +63,7 @@
     justify-content: space-between;
     align-items: center;
 
-    @include onTablet {
+    @include on-tablet {
       flex-direction: column;
       align-items: start;
       justify-content: flex-start;
@@ -100,14 +100,14 @@
     justify-content: space-between;
     gap: 20px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 0;
       gap: 50px;
     }
     &--contacts {
       width: 170px;
 
-      @include onTablet {
+      @include on-tablet {
         width: 220px;
       }
     }
@@ -119,7 +119,7 @@
     flex-direction: column;
     gap: 10px;
 
-    @include onTablet {
+    @include on-tablet {
       flex-direction: row;
       justify-content: space-between;
     }
@@ -161,7 +161,7 @@
   &__text {
     width: 130px;
 
-    @include onTablet {
+    @include on-tablet {
       width: 220px;
     }
   }
@@ -191,7 +191,7 @@
   &__hr {
     display: none;
 
-    @include onDesktop {
+    @include on-desktop {
       display: block;
       background-color: $colorMainSubtitle;
       width: 100%;
@@ -204,11 +204,11 @@
   display: flex;
   gap: 40px;
 
-  @include onTablet {
+  @include on-tablet {
     margin-left: 159px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     margin-right: 200px;
     margin-left: 0;
     gap: 80px;
