--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -10,14 +10,14 @@
     height: 100vh;
     display: block;
 
-    @include onTablet {
+    @include on-tablet {
       position: absolute;
       width: 50%;
       height: 100vh;
       top: 0;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       top: 0;
       width: 725px;
       height: 655px;
@@ -37,11 +37,11 @@
         transform: scale(1.1);
       }
 
-      @include onTablet {
+      @include on-tablet {
         right: 38%;
       }
 
-      @include onDesktop {
+      @include on-desktop {
         right: 42%;
       }
     }
@@ -52,7 +52,7 @@
     flex-direction: column;
     margin-top: 33px;
 
-    @include onDesktop {
+    @include on-desktop {
       margin-top: 45px;
     }
   }
@@ -65,13 +65,13 @@
     text-align: center;
     margin-bottom: 20px;
 
-    @include onTablet {
+    @include on-tablet {
       text-align: left;
       margin-top: 125px;
       margin-bottom: 40px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       font-size: 72px;
       line-height: 86px;
       margin-top: 143px;
@@ -95,7 +95,7 @@
       transform: scale(1.1);
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-left: 187px;
     }
   }
@@ -109,7 +109,7 @@
     width: 100vw;
     text-decoration: none;
 
-    @include onTablet {
+    @include on-tablet {
       height: 67px;
       width: 197px;
     }
@@ -133,7 +133,7 @@
     background-color: $colorMainSubtitle;
     background-position: center;
 
-    @include onTablet {
+    @include on-tablet {
       height: 69px;
       width: 70px;
     }
@@ -142,7 +142,7 @@
   &__verticalText {
     display: none;
 
-    @include onDesktop {
+    @include on-desktop {
       display: block;
       font-family: $fontsPlexSans;
       font-weight: 700;
