--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -1,16 +1,16 @@
 .main {
   margin-top: 70px;
 
-  @include onTablet {
+  @include on-tablet {
     margin-top: 107px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     margin-top: 300px;
   }
 
   &__events {
-    @include onDesktop {
+    @include on-desktop {
       display: flex;
       justify-content: space-between;
     }
@@ -21,11 +21,11 @@
     flex-direction: column;
     margin-top: 40px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 48px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-top: 56px;
     }
   }
@@ -40,11 +40,11 @@
       transform: scale(1.1);
     }
 
-    @include onTablet {
+    @include on-tablet {
       width: 100%;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       height: 520px;
       width: 670px;
     }
@@ -53,11 +53,11 @@
   &__text {
     margin-top: 20px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 40px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-top: 0;
     }
   }
@@ -67,7 +67,7 @@
   display: flex;
   flex-direction: column;
 
-  @include onDesktop {
+  @include on-desktop {
     justify-content: center;
   }
 
@@ -75,7 +75,7 @@
     display: flex;
     justify-content: space-between;
 
-    @include onTablet {
+    @include on-tablet {
       justify-content: start;
       gap: 100px;
     }
@@ -103,7 +103,7 @@
     color: #0f0e08;
     margin-top: 15px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 30px;
       font-size: 36px;
       line-height: 36px;
@@ -129,7 +129,7 @@
     color: #4e4e4e;
     margin-top: 10px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 15px;
       width: 460px;
     }
@@ -139,7 +139,7 @@
 .top {
   margin-top: 60px;
 
-  @include onTablet {
+  @include on-tablet {
     margin-top: 64px;
   }
 }
@@ -147,7 +147,7 @@
 .bg {
   margin-top: 60px;
 
-  @include onTablet {
+  @include on-tablet {
     margin-top: 112px;
   }
 
@@ -156,11 +156,11 @@
     height: 210px;
     object-fit: cover;
 
-    @include onTablet {
+    @include on-tablet {
       height: 390px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       height: 550px;
     }
   }
@@ -179,7 +179,7 @@
     justify-content: space-evenly;
     align-items: center;
 
-    @include onTablet {
+    @include on-tablet {
       width: 515px;
       height: 204px;
     }
@@ -189,7 +189,7 @@
     display: flex;
     gap: 15px;
 
-    @include onTablet {
+    @include on-tablet {
       gap: 140px;
     }
     &--title {
@@ -215,7 +215,7 @@
     color: #0f0e08;
     text-align: center;
 
-    @include onTablet {
+    @include on-tablet {
       font-size: 36px;
       line-height: 36px;
     }
