--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -3,7 +3,7 @@
   transition: $transition;
   overflow-y: auto;
 
-  @include onDesktop {
+  @include on-desktop {
     height: 233px;
   }
 
@@ -13,7 +13,7 @@
     margin-top: 33px;
     margin-bottom: 27px;
 
-    @include onDesktop {
+    @include on-desktop {
       margin-top: 45px;
     }
   }
@@ -23,7 +23,7 @@
     flex-direction: column;
     justify-content: space-around;
 
-    @include onTablet {
+    @include on-tablet {
       flex-direction: row;
       justify-content: space-between;
     }
@@ -34,7 +34,7 @@
     flex-direction: row;
     gap: 33px;
 
-    @include onDesktop {
+    @include on-desktop {
       gap: 35px;
     }
   }
@@ -53,12 +53,12 @@
     margin-left: 46px;
     margin-top: -15px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-left: 0;
       margin-top: 0;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       gap: 100px;
     }
 
@@ -68,7 +68,7 @@
       flex-direction: column;
       gap: 20px;
 
-      @include onDesktop {
+      @include on-desktop {
         gap: 30px;
       }
     }
@@ -87,7 +87,7 @@
       color: #0a3810;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       font-size: 22px;
     }
   }
@@ -102,7 +102,7 @@
     margin-top: 24px;
     margin-bottom: 24px;
 
-    @include onDesktop {
+    @include on-desktop {
       margin: 0;
     }
   }
@@ -111,14 +111,14 @@
     padding-right: 0;
     flex-direction: column;
 
-    @include onTablet {
+    @include on-tablet {
       justify-content: space-between;
       gap: 40px;
       flex-direction: row;
       padding-right: 50px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       gap: 40px;
       flex-direction: row;
       padding-right: 100px;
@@ -132,14 +132,14 @@
     margin: 0;
     margin-bottom: 20px;
 
-    @include styleHeader;
+    @include style-header;
 
     line-height: 20px;
 
     &--list {
       list-style: none;
 
-      @include styleHeader;
+      @include style-header;
 
       line-height: 21px;
       span {
@@ -151,24 +151,24 @@
   &__add {
     margin-top: 15px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 40px;
     }
   }
 
   &__text {
-    @include styleHeader;
+    @include style-header;
 
     word-wrap: break-word;
     span {
       font-weight: 600;
     }
 
-    @include onTablet {
+    @include on-tablet {
       width: 144px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       width: 144px;
     }
   }
