--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -7,12 +7,12 @@
   height: 386px;
   margin-top: 100px;
 
-  @include onTablet {
+  @include on-tablet {
     margin-top: 92px;
     height: 380px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     margin-top: 200px;
     height: 550px;
   }
@@ -24,11 +24,11 @@
     align-items: center;
     height: 386px;
 
-    @include onTablet {
+    @include on-tablet {
       height: 380px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       height: 550px;
     }
   }
@@ -39,7 +39,7 @@
     line-height: 36px;
     color: #fff;
 
-    @include onTablet {
+    @include on-tablet {
       font-size: 48px;
       line-height: 48px;
     }
@@ -53,7 +53,7 @@
     color: #fff;
     margin-top: 20px;
 
-    @include onTablet {
+    @include on-tablet {
       line-height: 18px;
       margin-top: 16px;
     }
@@ -62,11 +62,11 @@
   &__button {
     margin-top: 50px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 64px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-top: 72px;
     }
   }
@@ -76,11 +76,11 @@
     flex-direction: row;
     gap: 0;
 
-    @include onTablet {
+    @include on-tablet {
       gap: 16px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       gap: 30px;
     }
   }
@@ -98,12 +98,12 @@
       outline: none;
     }
 
-    @include onTablet {
+    @include on-tablet {
       width: 374px;
       height: 70px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       width: 470px;
     }
   }
@@ -123,7 +123,7 @@
       transform: scale(1.1);
     }
 
-    @include onTablet {
+    @include on-tablet {
       width: 74px;
       height: 74px;
     }
