--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -2,11 +2,11 @@
   margin: 0 auto;
   padding: 0 20px;
 
-  @include onTablet {
+  @include on-tablet {
     padding: 0 35px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     padding: 0 55px;
   }
 }
