--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -14,8 +14,8 @@
     margin-bottom: 20px;
     gap: 20px;
 
-    @include onDesktop {
-      @include pageGrid;
+    @include on-desktop {
+      @include page-grid;
 
       width: 100%;
     }
@@ -24,10 +24,10 @@
   // &__img {
   //   width: 280px;
   //   height: 543px;
-  //   @include onTablet {
+  //   @include on-tablet {
   //     height: 543px;
   //   }
-  //   @include onDesktop {
+  //   @include on-desktop {
   //     background-position: 50%;
   //     background-size: cover;
   //     width: 100%;
@@ -37,7 +37,7 @@
   //     &--1 {
   //       background-image: url(../images/gallery/pict1.svg);
   //       background-repeat: no-repeat;
-  //     @include onDesktop {
+  //     @include on-desktop {
   //       object-fit: cover;
   //       object-position: 50%;
   //       height: 600px;
@@ -49,7 +49,7 @@
   //     &--2 {
   //       background-image: url(../images/gallery/pict2.svg);
   //       background-repeat: no-repeat;
-  //       @include onDesktop{
+  //       @include on-desktop{
   //         grid-column: 5/-1;
   //         height: 600px;
   //         margin-bottom: 30px;
@@ -58,10 +58,10 @@
   //     &--3 {
   //       background-image: url(../images/gallery/pict3.svg);
   //       background-repeat: no-repeat;
-  //       @include onTablet {
+  //       @include on-tablet {
   //         height: 543px;
   //       }
-  //       @include onDesktop {
+  //       @include on-desktop {
   //         grid-column: 1/9;
   //         height: 543px;
   //         width: 850px;
@@ -70,7 +70,7 @@
   //     &--4 {
   //       background-image: url(../images/gallery/pict4.svg);
   //       background-repeat: no-repeat;
-  //       @include onDesktop {
+  //       @include on-desktop {
   //         grid-column: 9/-1;
   //         height: 600px;
 
@@ -84,12 +84,12 @@
     height: 410px;
     transition: $transition;
 
-    @include onTablet {
+    @include on-tablet {
       width: 340px;
       height: 543px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       background-position: 50%;
       background-size: cover;
       width: 100%;
@@ -102,7 +102,7 @@
     &--1 {
       background-image: url(../images/gallery/pict1.svg);
 
-      @include onDesktop {
+      @include on-desktop {
         object-fit: cover;
         background-size: cover;
         grid-column: 1 / 5;
@@ -114,7 +114,7 @@
     &--2 {
       background-image: url(../images/gallery/pict2.svg);
 
-      @include onDesktop {
+      @include on-desktop {
         grid-column: 5 / 13;
         height: 600px;
       }
@@ -123,7 +123,7 @@
     &--3 {
       background-image: url(../images/gallery/pict3.svg);
 
-      @include onDesktop {
+      @include on-desktop {
         grid-column: 1 / 9;
         height: 360px;
       }
@@ -132,7 +132,7 @@
     &--4 {
       background-image: url(../images/gallery/pict4.svg);
 
-      @include onDesktop {
+      @include on-desktop {
         grid-column: 9 / 13;
         height: 360px;
       }
@@ -164,7 +164,7 @@
     gap: 22px;
     justify-content: center;
 
-    @include onDesktop {
+    @include on-desktop {
       display: none;
     }
   }
