--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -4,13 +4,13 @@
   text-align: center;
   margin-top: 70px;
 
-  @include onTablet {
+  @include on-tablet {
     text-align: left;
     margin-top: 107px;
     font-size: 48px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     text-align: left;
     margin-top: 100px;
   }
