--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,13 @@
+$phone-min-width: 320px;
+$tablet-min-width: 640px;
+$desktop-min-width: 1280px;
+$big-desktop-min-width: 1440px;
 $c-gray: #eee;
+$menu-background-font-button-color: rgba(26, 90, 76, 1);
+$menu-and-subscribe-font-color: rgba(255, 255, 255, 1);
+$background-color: rgba(255, 255, 255, 1);
+$subscribe-button-color: rgba(241, 74, 39, 1);
+$title-font-color: rgba(15, 14, 8, 1);
+$uppercase-font-light-color: rgba(104, 116, 128, 1);
+$font-light-color: rgba(78, 78, 78, 1);
+$slider-color: rgba(224, 224, 224, 1);
