--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,22 @@
 h1 {
   @extend %h1;
 }
+
+h2,
+h3 {
+  @extend %h2;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+p {
+  @extend %p;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
