--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,12 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import 'blocks/header';
+@import 'blocks/icons';
+@import 'blocks/section-title';
+@import 'blocks/menu';
+@import 'blocks/page';
+@import 'blocks/event';
+@import 'blocks/gallery';
+@import 'blocks/subscribe';
+@import 'blocks/footer';
