--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,16 @@
 %h1 {
-  font-family: Roboto, sans-serif;
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  margin: 0;
+}
+
+%h3,
+%h2 {
+  font-family: Montserrat, sans-serif;
   font-weight: 400;
+  margin: 0;
+}
+
+%p {
+  margin: 0;
 }
