add readme and add hover

--- a/src/styles/blocks/section-title.scss
+++ b/src/styles/blocks/section-title.scss
@@ -1,5 +1,5 @@
 .section-title {
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-size: 36px;
   font-weight: 700;
   line-height: 36px;
