--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -7,7 +7,6 @@
 
   &__container {
     @include inline-padding;
-
     @include page-grid;
   }
 
@@ -64,7 +63,7 @@
     box-sizing: border-box;
     border: none;
     &::placeholder {
-      font-family: Montserrat;
+      font-family: Montserrat, sans-serif;
       font-size: 14px;
       line-height: 14px;
     }
@@ -84,6 +83,8 @@
     outline: none;
     border: none;
     cursor: pointer;
+
+    @include hover(background-color, #ed5c3f);
 
     @include on-tablet {
       flex-basis: 70px;
