--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -2,6 +2,7 @@
   transition: #{$_property} 0.3s;
   &:hover {
     #{$_property}: $_toValue;
+    z-index: 2;
   }
 }
 
@@ -64,12 +65,13 @@
   grid-template-columns: repeat(var(--columns), 1fr);
   column-gap: 20px;
 
-  @include on-tablet() {
+  @include on-tablet {
     --columns: 6;
   }
 
-  @include on-desktop() {
+  @include on-desktop {
     --columns: 12;
+
     column-gap: 30px;
   }
 }
