--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -20,6 +20,10 @@
   &__photo {
     grid-column: 1 / -1;
 
+    @include on-tablet{
+      @include hover(transform, scale(1.1));
+    }
+
     @include on-desktop {
       grid-column: 1 / 8;
     }
