--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -52,6 +52,8 @@
 
     @include on-tablet {
       width: $slide-width-m;
+
+      @include hover(transform, scale(1.1));
     }
 
     @include on-desktop {
