--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -130,6 +130,8 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+
+    @include hover(background-color, #113c33);
   }
 }
 
