--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -4,3 +4,5 @@ $main-color: #0F0E08;
 $tablet-min-width: 768px;
 $desktop-min-width: 1280px;
 $menu-bg-color: #1A5A4C;
+$event-title-color: #687480;
+
