fix links and menu

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -25,6 +25,10 @@
     font-weight: 700;
     font-size: 36px;
     line-height: 36px;
+
+    @include on-tablet{
+      @include hover(transform, scale(1.15));
+    }
   }
 
   &__social-media {
@@ -66,6 +70,13 @@
 
     span {
       white-space: nowrap;
+    }
+    @include on-tablet{
+      transition: all 0.3s ease 0s;
+      &:hover{
+        text-decoration: underline;
+        color: $c-green;
+      }
     }
   }
 
