--- a/src/styles/blocks/icons.scss
+++ b/src/styles/blocks/icons.scss
@@ -23,10 +23,16 @@
 
   &--fb {
     background-image: url(../images/icons/icon-facebook.svg);
+
+    @include hover(transform, scale(1.15));
+
   }
 
   &--insta {
     background-image: url(../images/icons/icon-instagram.svg);
+
+    @include hover(transform, scale(1.15));
+
   }
 
   &--arrow-up {
