--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -7,7 +7,6 @@
     box-sizing: border-box;
     color: #fff;
     padding-block: 27px;
-    max-width: 1280px;
     margin: 0 auto;
 
     @include inline-padding;
@@ -48,6 +47,11 @@
 
   &__item {
     flex: 40%;
+
+    @include on-tablet{
+      transform-origin: center;
+      @include hover(transform, scale(1.05));
+    }
   }
 
   &__bottom {
