--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -19,10 +19,8 @@
 
   &__photo {
     grid-column: 1 / -1;
+    overflow: hidden;
 
-    @include on-tablet{
-      @include hover(transform, scale(1.1));
-    }
 
     @include on-desktop {
       grid-column: 1 / 8;
@@ -30,9 +28,13 @@
   }
 
   &__img {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
+
+    @include on-tablet{
+      @include hover(transform, scale(1.1));
+    }
   }
 
   &__content {
@@ -45,6 +47,7 @@
 
     @include on-desktop {
       grid-column: -5 / -1;
+      align-content: center;
     }
   }
 
@@ -53,9 +56,15 @@
     justify-content: space-between;
     align-items: center;
     gap: 25px;
+    margin-top: 20px;
 
     @include on-tablet {
       justify-content: flex-start;
+      margin-top: 40px;
+    }
+
+    @include on-desktop{
+      margin-top: 0;
     }
   }
 
@@ -104,14 +113,15 @@
   &--big {
     margin-bottom: 0;
 
-    @include on-tablet {
-      @include inline-padding;
-    }
-
     .event__photo {
       @include on-desktop {
         grid-column: 1 / -1;
+        overflow: hidden;
       }
+    }
+
+    .event__date-event{
+      margin-top: 0;
     }
 
     .event__box {
