--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -8,6 +8,7 @@
 
   @include on-desktop {
     margin-bottom: 200px;
+    overflow: visible;
   }
 
   &__title {
@@ -52,8 +53,12 @@
 
     @include on-tablet {
       width: $slide-width-m;
-
-      @include hover(transform, scale(1.1));
+      transition: all 0.3s;
+      &:hover {
+        transform: scale(1.02);
+        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+        z-index: 2;
+      }
     }
 
     @include on-desktop {
