--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,16 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin on-tablet {
+  @media(min-width: $tablet-min-width) {
+    @content;
+  }
+}
+
+@mixin on-desktop {
+  @media(min-width: $desktop-min-width) {
+    @content;
+  }
+}
+
